# emf-to-png-convertor

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
notebook/: 01_pywin.ipynb
sample/: input.emf
src/emf_to_png/: __init__.py  main.py
